saml scaffolding
